<resources>
    <string name="app_name">bikproject</string>
    <string name="button_sign_in">Войти</string>
    <string name="password_sign_in_hint">Введите пароль</string>
    <string name="login_sign_in_hint">Введите email</string>
    <string name="login_can_not_be_empty">Логин не может быть пустым</string>
    <string name="password_can_not_be_empty">Пароль не может быть пустым</string>
    <string name="login_or_password_error">Не правильный логин или пароль</string>
    <string name="register_sign_in_page">Зарегистрироваться</string>
    <string name="password_sign_up_enter">Введите пароль</string>
    <string name="password_sign_up_reenter">Подтвердите пароль</string>
    <string name="sign_up_title_page">Регистрация</string>
    <string name="button_sign_up">Зарегистрироваться\n</string>
    <string name="error_re_enter_password">Пароли не совпадают</string>
    <string name="field_can_not_be_empty">Поле не может быть пустым!</string>
    <string name="error_can_not_perfom_sign_up">Что-то пошло не так, попробуйте позже</string>
    <string name="sign_up_succefull_messasges">Вы успешно зарегестрированны</string>
    <string name="sign_up_succefull_messasges_ok_button">ОК</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_title">Добро пожаловать!</string>
    <string name="name_sign_in_hint">Введите nickaname</string>
    <string name="phone_number_hint">Введите номер телефона</string>
    <string name="register_cities_hint">Выберите город</string>
    <string name="register_page_date_of_birth">Дата рождения</string>
    <string name="register_fio_hint">ФИО</string>

    <string-array name="cities_array">
        <item>Белгород</item>
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Новосибирск</item>
        <item>Екатеринбург</item>
        <item>Нижний Новгород</item>
        <item>Казань</item>
        <item>Челябинск</item>
        <item>Омск</item>
        <item>Самара</item>
        <item>Ростов-на-Дону</item>
        <item>Уфа</item>
        <item>Красноярск</item>
        <item>Воронеж</item>
        <item>Пермь</item>
        <item>Волгоград</item>
        <item>Краснодар</item>
        <item>Саратов</item>
        <item>Тюмень</item>
        <item>Тольятти</item>
        <item>Ижевск</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home_element">Акции</string>
    <string name="menu_profile_element">Профиль</string>
    <string name="account_balance_profile">Ваши баллы </string>
    <string name="city_text_view_profile">Город: </string>
    <string name="birthday_text_view_profile">Дата рождения: </string>
    <string name="your_order_profile_button">Ваши заказы</string>
    <string name="fio_text_view_profile">ФИО</string>
    <string name="details_title">Карточка акции</string>
    <string name="product_name_details">Дата начала акции</string>
    <string name="price_details">Период проведения</string>
    <string name="name_product_details">Название продукта</string>
    <string name="add_in_cart_text">Вернуться</string>
    <string name="succec_buy">Вы успешно купили товар, бонусы зачислены на счет!</string>
    <string name="card_number_text">Номер карты</string>
    <string name="price_sum_txt">Цена</string>
    <string name="pay_text_cart">Оплатить</string>
    <string name="menu_cart">Бонусы</string>
    <string name="todo">TODO</string>
    <string name="card_number">Введите номер карты</string>
    <string name="about">Web</string>
    <string name="Профиль">Профиль</string>
    <string name="description">Описание товара</string>
    <string name="t">T</string>
    <string name="i">I</string>
    <string name="f">F</string>
    <string name="phone_number">Горячая линия 8 800 770 01 81 Звонки по России бесплатно. Будни с 7 до 22 часов, выходные: с 8 до 22 часов</string>


</resources>