<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffdd2">

    <LinearLayout
        android:id="@+id/block1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#fffdd2"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="134dp"
            android:layout_height="96dp"
            android:src="@drawable/baseline_person_24"
            android:contentDescription="@string/Профиль" />

        <LinearLayout
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fioTextViewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fio_text_view_profile"
                android:textColor="#ff0000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/birthdayTextViewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:text="@string/birthday_text_view_profile"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cityTextViewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:text="@string/city_text_view_profile"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/block3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/block1"
        android:layout_marginTop="16dp"
        android:background="#fffdd2"
        android:padding="16dp">

        <Button
            android:id="@+id/listOfOrdersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorRed"
            android:elevation="0dp"
            android:textColor="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/your_order_profile_button"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/pointsTextViewProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textColor="#ff0000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/about"
        app:icon="@drawable/baseline_shopping_cart_24" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="200dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/block3" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:text = "@string/f"
            android:backgroundTint="@color/colorRed"
            app:icon="@drawable/button_facebook" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorRed"
            android:text = "@string/i"
            app:icon="@drawable/button_instagram"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorRed"
            android:text = "@string/t"
            app:icon="@drawable/button_telegram"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</RelativeLayout>





