<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fffdd2"
    tools:context=".activities.DetailsActivity">

    <TextView
        android:id="@+id/detailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="10dp"
        android:text="@string/details_title"
        android:textColor="@color/colorRed"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/a1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/product_name_details"
        android:textColor="@color/colorRed"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name_product_details"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/price_details"
        android:textColor="@color/colorRed"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="0"
        android:textSize="20sp" />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:text="@string/description"-->
<!--        android:textColor="@color/colorRed"-->
<!--        android:textSize="30sp"-->
<!--        android:textStyle="bold" />-->

<!--    <TextView-->
<!--        android:id="@+id/description"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:text="@string/price_details"-->
<!--        android:textSize="20sp" />-->

    <Button
        android:id="@+id/buttonAddInCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add_in_cart_text"
        android:backgroundTint="@color/colorRed"/>

</LinearLayout>