<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffdd2"
    tools:context=".activities.LoginPageActivity">

    <EditText
        android:id="@+id/emailSingUpTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="39dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/login_sign_in_hint"
        android:inputType="textEmailAddress"
        android:minHeight="40dp"
        app:layout_constraintBottom_toTopOf="@+id/reEnterPasswordSignUpTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/reEnterPasswordSignUpTextEdit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password_sign_in_hint"
        android:inputType="textPassword"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/logInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSingUpTextEdit" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fb0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#fb0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="18dp"
        android:width="194dp"
        android:height="35dp"
        android:backgroundTint="@color/colorRed"
        android:fontFamily="@font/montserrat"
        android:text="@string/button_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/registerPageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reEnterPasswordSignUpTextEdit" />

    <Button
        android:id="@+id/registerPageBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/colorRed"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/register_sign_in_page"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/emailSingUpTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/vxxp1yyb"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>